--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.23.6",
+    "gulp-changed-in-place": "^2.3.0",
+    "gulp-front-matter": "^1.3.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-plumber-notifier": "0.0.3",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0"
   }
