--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.23.6",
+    "gulp": "^3.9.1",
     "gulp-changed-in-place": "^2.3.0",
     "gulp-front-matter": "^1.3.0",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-plumber-notifier": "0.0.3",
+    "gulp-pug": "^4.0.1",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0"
   }
