--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-changed-in-place": "^2.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-ignore": "^2.0.2",
     "gulp-notify": "^3.2.0",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
+    "main-bower-files": "^2.13.1",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0"
   }
