--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "^3.3.1",
-    "normalize-css": "^8.0.0"
+    "normalize-css": "^8.0.0",
+    "animate.css": "^3.5.2"
   }
 }
