--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
+    "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "main-bower-files": "^2.13.1",
     "pug": "^2.0.3",
