--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "normalize-css": "^8.0.0",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "svg4everybody": "^2.1.9"
   }
 }
