--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-ignore": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.2.0",
@@ -30,8 +31,11 @@
     "gulp-strip-css-comments": "^2.0.0",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
+    "gulp.spritesmith": "^6.9.0",
     "main-bower-files": "^2.13.1",
+    "merge-stream": "^1.0.1",
     "pug": "^2.0.3",
-    "require-dir": "^1.0.0"
+    "require-dir": "^1.0.0",
+    "vinyl-buffer": "^1.0.1"
   }
 }
