--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-changed-in-place": "^2.3.0",
+    "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
@@ -26,9 +27,12 @@
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.3",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
+    "gulp-svg-sprite": "^1.4.0",
+    "gulp-svgmin": "^1.2.4",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.9.0",
