--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "merge-stream": "^1.0.1",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0",
+    "run-sequence": "^2.2.1",
     "vinyl-buffer": "^1.0.1"
   }
 }
