--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "normalize-css": "^8.0.0",
     "animate.css": "^3.5.2",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "barba.js": "luruke/barba.js#^1.0.0"
   }
 }
