--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gulp",
     "build": "gulp build",
     "clean": "gulp clean",
-    "surge": "gulp build && surge --project ./dest --domain domainName.surge.sh"
+    "deploy": "gulp build && surge --project ./dest --domain domainName.surge.sh"
   },
   "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
   "license": "ISC",
