Replace bodyClassName to contentClassName - del in body tag. Modify gulp clean task.

--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
     }
   },
   "dependencies": {
-    "normalize-css": "^8.0.0",
-    "css-hamburgers": "^0.9.3"
+    "normalize-css": "^8.0.0"
   }
 }
