--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     }
   },
   "dependencies": {
-    "normalize-css": "^8.0.0"
+    "normalize-css": "^8.0.0",
+    "bower-webfontloader": "^1.6.6"
   }
 }
