Change logic for image task (compress, create webp). Add mixin for picture tag with js polyfill. Add new callback to default js.

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "normalize-css": "^8.0.0",
-    "bower-webfontloader": "^1.6.6"
+    "bower-webfontloader": "^1.6.6",
+    "svg4everybody": "^2.1.9",
+    "picturefill": "^3.0.3"
   }
 }
