--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "gulp-svgmin": "^1.2.4",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-webp": "^3.0.0",
     "gulp.spritesmith": "^6.9.0",
     "main-bower-files": "^2.13.1",
-    "merge-stream": "^1.0.1",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1",
