--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-changed-in-place": "^2.3.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
+    "gulp-consolidate": "^0.2.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-ignore": "^2.0.2",
@@ -44,6 +45,7 @@
     "main-bower-files": "^2.13.1",
     "pug": "^2.0.3",
     "require-dir": "^1.0.0",
+    "require-yaml": "0.0.1",
     "run-sequence": "^2.2.1",
     "vinyl-buffer": "^1.0.1"
   },
