--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "gulp",
     "build": "gulp build",
     "clean": "gulp clean",
-    "deploy": "gulp build && surge --project ./dest --domain domainName.surge.sh"
+    "deploy-dev" : "gulp build --dev && surge --project ./dest --domain domainName.surge.sh",
+    "deploy-prod" : "gulp production --prod && surge --project ./dest --domain domainName.surge.sh"
   },
   "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
   "license": "ISC",
@@ -25,7 +26,8 @@
     "gulp-consolidate": "^0.2.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
-    "gulp-ignore": "^2.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-order": "^1.1.1",
@@ -47,7 +49,8 @@
     "require-dir": "^1.0.0",
     "require-yaml": "0.0.1",
     "run-sequence": "^2.2.1",
-    "vinyl-buffer": "^1.0.1"
+    "vinyl-buffer": "^1.0.1",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {}
 }
