--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "gulp",
     "build": "gulp build",
     "clean": "gulp clean",
-    "deploy-dev" : "gulp build --dev && surge --project ./dest --domain domainName.surge.sh",
-    "deploy-prod" : "gulp production --prod && surge --project ./dest --domain domainName.surge.sh"
+    "deploy-dev": "gulp build --dev && surge --project ./dest --domain domainName.surge.sh",
+    "deploy-prod": "gulp production --prod && surge --project ./dest --domain domainName.surge.sh"
   },
   "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -27,10 +27,12 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-iconfont": "^10.0.2",
+    "gulp-iconfont-css": "^2.3.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
-    "gulp-order": "^1.1.1",
+    "gulp-order": "^1.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.3",
