--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "normalize-css": "^8.0.0",
     "bower-webfontloader": "^1.6.6",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "reset-css": "^4.0.1"
   }
 }
