--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "gulp",
     "build": "gulp build",
     "clean": "gulp clean",
-    "deploy-dev": "gulp build --dev && surge --project ./dest --domain domainName.surge.sh",
-    "deploy-prod": "gulp production --prod && surge --project ./dest --domain domainName.surge.sh"
+    "deploy-dev": "gulp build --dev && surge --project ./dest --domain https://domainName.surge.sh",
+    "deploy-prod": "gulp production --prod && surge --project ./dest --domain https://domainName.surge.sh"
   },
   "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
   "license": "ISC",
