--- a/package.json
+++ b/package.json
@@ -19,32 +19,33 @@
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-pug": "^4.0.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-front-matter": "^1.3.0",
+    "gulp": "4.0.2",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-changed": "3.2.0",
     "gulp-cheerio": "^0.6.3",
-    "gulp-clean-css": "4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
+    "gulp-cssnano": "2.1.3",
     "gulp-file-include": "^2.1.1",
+    "gulp-front-matter": "1.1.0",
     "gulp-iconfont": "^10.0.2",
-    "gulp-iconfont-css": "^2.3.0",
-    "gulp-notify": "3.2.0",
+    "gulp-iconfont-css": "3.0.0",
+    "gulp-notify": "4.0.0",
     "gulp-order": "^1.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-pug": "5.0.0",
+    "gulp-rename": "2.0.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "5.0.0",
     "gulp-sass-glob": "1.1.0",
     "gulp-strip-css-comments": "^2.0.0",
-    "gulp-svg-sprite": "^1.4.0",
-    "gulp-svgmin": "^1.2.4",
+    "gulp-svg-sprite": "1.5.0",
+    "gulp-svgmin": "4.1.0",
+    "gulp-uglify-es": "3.0.0",
     "gulp.spritesmith": "^6.9.0",
     "require-dir": "^1.0.0",
     "require-yaml": "0.0.1",
-    "sassdoc": "2.7.1",
+    "sass": "1.44.0",
     "vinyl-buffer": "^1.0.1",
     "webpack-stream": "^5.2.1"
   }
