--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "SmallTMP",
-  "version": "0.1.1",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Small Gulp.JS template for create simple projects.",
+  "homepage": "https://github.com/MrHidalgo/SmallTMP",
+  "bugs": {
+    "url": "https://github.com/MrHidalgo/SmallTMP/issues",
+    "email": "hkovalenko9@gmail.com"
+  },
+  "author": "Andrii Kovalenko - <hkovalenko9@gmail.com>",
+  "license": "ISC",
   "main": "index.js",
   "scripts": {
     "start": "gulp",
@@ -9,44 +16,47 @@
     "clean": "gulp clean",
     "deploy": "gulp build && surge --project ./dest --domain http://projectName-dev.surge.sh"
   },
-  "author": "Andrii Kovalenko <hkovalenko9@gmail.com>",
-  "license": "ISC",
+  "browserslist": [
+    "last 3 versions",
+    "> 1%",
+    "ie 10-11"
+  ],
   "dependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.3",
-    "del": "^3.0.0",
+    "browser-sync": "^2.27.7",
+    "del": "^6.0.0",
     "gulp": "4.0.2",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-changed": "3.2.0",
-    "gulp-cheerio": "^0.6.3",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-changed": "4.0.3",
+    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-consolidate": "^0.2.0",
     "gulp-cssnano": "2.1.3",
-    "gulp-file-include": "^2.1.1",
-    "gulp-front-matter": "1.1.0",
-    "gulp-iconfont": "^10.0.2",
+    "gulp-file-include": "^2.3.0",
+    "gulp-front-matter": "1.3.0",
+    "gulp-iconfont": "^11.0.1",
     "gulp-iconfont-css": "3.0.0",
     "gulp-notify": "4.0.0",
     "gulp-order": "^1.2.0",
-    "gulp-plumber": "^1.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-pug": "5.0.0",
     "gulp-rename": "2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "5.0.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "5.1.0",
     "gulp-sass-glob": "1.1.0",
     "gulp-strip-css-comments": "^2.0.0",
     "gulp-svg-sprite": "1.5.0",
     "gulp-svgmin": "4.1.0",
     "gulp-uglify-es": "3.0.0",
-    "gulp.spritesmith": "^6.9.0",
-    "require-dir": "^1.0.0",
-    "require-yaml": "0.0.1",
-    "sass": "1.44.0",
-    "vinyl-buffer": "^1.0.1",
-    "webpack-stream": "^5.2.1"
+    "gulp.spritesmith": "^6.12.1",
+    "require-dir": "^1.2.0",
+    "sass": "1.49.0",
+    "webpack-stream": "^7.0.0"
+  },
+  "devDependencies": {
+    "webpack": "5.67.0"
   }
 }
