--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "Andrii Kovalenko - <hkovalenko9@gmail.com>",
   "license": "ISC",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
@@ -43,6 +43,7 @@
     "gulp-order": "^1.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "5.0.0",
+    "gulp-pug-linter": "1.5.0",
     "gulp-rename": "2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-sass": "5.1.0",
